--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -62,6 +62,17 @@ footer {
   // background-color: coral;
 }
 
+.title-Header {
+  h1 {
+    font-size: 30px;
+    // font-family: ProximaNovaThin;
+  }
+  hr {
+    @include nav-black();
+    width: 171px;
+  }
+}
+
 // @media screen and (max-width: 1140px) {
 //   .homePictures {
 //     background-color: red;
