--- a/css/styles.css
+++ b/css/styles.css
@@ -638,33 +638,52 @@ button a {
   right: 0;
 }
 
-.spe-Offers .title-Header h1 {
+.title-Header h1 {
   font-size: 40px;
 }
-.spe-Offers .title-Header hr {
+.title-Header hr {
   background-color: #000000;
   border: 1px solid #000000;
   width: 200px;
 }
-.spe-Offers .offers-IMG-box {
-  max-width: 200px;
+
+.spe-Offers-Section {
   height: 287px;
-  background-color: red;
+  width: 100%;
   margin-top: 35.5px;
+  margin-bottom: 60px;
+  display: flex;
+  align-items: flex-start;
 }
-.spe-Offers .offers-IMG-box .offers-img1,
-.spe-Offers .offers-IMG-box .offers-img2 {
+.spe-Offers-Section .offers-IMG-box {
+  height: 100%;
+  width: 200px;
+  margin-right: 20px;
+}
+.spe-Offers-Section .offers-IMG-box .offers-img1,
+.spe-Offers-Section .offers-IMG-box .offers-img2 {
   height: 100%;
   width: 100%;
   background-size: cover;
   background-position: center;
   color: #ffffff;
 }
-.spe-Offers .offers-IMG-box .offers-img1 {
+.spe-Offers-Section .offers-IMG-box .offers-img1 {
   background-image: url(../images/special-offer-01.jpg);
 }
-.spe-Offers .offers-IMG-box .offers-img2 {
+.spe-Offers-Section .offers-IMG-box .offers-img2 {
   background-image: url(../images/special-offer-02.jpg);
+}
+.spe-Offers-Section .sectionText p {
+  width: 290px;
+  height: 100%;
+}
+.spe-Offers-Section .sectionText span {
+  color: #ff4500;
+  font-size: 25px;
+}
+.spe-Offers-Section .sectionText .learnMore {
+  margin-top: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
