--- a/css/styles.css
+++ b/css/styles.css
@@ -655,6 +655,11 @@ button a {
   display: flex;
   align-items: flex-start;
 }
+@media screen and (max-width: 563px) {
+  .spe-Offers-Section {
+    height: 305px;
+  }
+}
 .spe-Offers-Section .offers-IMG-box {
   height: 100%;
   width: 200px;
@@ -684,6 +689,14 @@ button a {
 }
 .spe-Offers-Section .sectionText .learnMore {
   margin-top: 30px;
+}
+@media screen and (max-width: 563px) {
+  .spe-Offers-Section .sectionText h1 {
+    width: 250px;
+  }
+  .spe-Offers-Section .sectionText .learnMore {
+    margin: 0;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
