--- a/scss/offers/offers.scss
+++ b/scss/offers/offers.scss
@@ -15,7 +15,9 @@
   margin-bottom: 60px;
   display: flex;
   align-items: flex-start;
-
+  @media screen and (max-width: 563px) {
+    height: 305px;
+  }
   .offers-IMG-box {
     height: 100%;
     width: 200px;
@@ -44,6 +46,15 @@
     }
     .learnMore {
       margin-top: 30px;
+    }
+    @media screen and (max-width: 563px) {
+      h1 {
+        width: 250px;
+      }
+
+      .learnMore {
+        margin: 0;
+      }
     }
   }
 }
