--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,12 @@ nav {
   justify-content: space-between;
   bottom: 20.5px;
 }
+@media screen and (max-width: 546px) {
+  nav .links {
+    margin-left: 10px;
+    justify-content: space-evenly;
+  }
+}
 nav .links .logo {
   width: 136px;
   height: 45px;
