--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,14 @@ footer .footer-content {
   justify-content: space-around;
   padding-top: 5px;
 }
+@media screen and (max-width: 532px) {
+  footer .footer-content {
+    justify-content: space-between;
+  }
+  footer .footer-content img {
+    margin-right: 20px;
+  }
+}
 
 .homeBanner {
   height: 500px;
