--- a/scss/nav/nav.scss
+++ b/scss/nav/nav.scss
@@ -55,4 +55,12 @@ footer {
     justify-content: space-around;
     padding-top: 5px;
   }
+  @media screen and (max-width: 532px) {
+    .footer-content {
+      justify-content: space-between;
+      img {
+        margin-right: 20px;
+      }
+    }
+  }
 }
