--- a/css/styles.css
+++ b/css/styles.css
@@ -714,9 +714,46 @@ button a {
   }
 }
 
-.dateBox {
+.blog-Section {
+  max-width: 980px;
+  min-height: 259px;
+  display: flex;
+  justify-content: space-between;
+}
+.blog-Section .dateBox {
   height: 60px;
   width: 60px;
+  background-color: #79addc;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 18px 0;
+}
+.blog-Section .dateBox .dateNumber {
+  font-size: 22px;
+}
+.blog-Section .dateBox .dateMonth {
+  font-size: 12px;
+}
+.blog-Section .blog-Section-Row {
+  width: 900px;
+  min-height: 300px;
+}
+.blog-Section .blog-Section-Row .blog-IMG-box {
+  max-width: 900px;
+  height: 259px;
+}
+.blog-Section .blog-Section-Row .blog-IMG-box .blog-IMG {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/blog.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.blog-Section .blog-Section-Row p {
+  margin-top: 20px;
+  font-size: 15px;
 }
 
 /*# sourceMappingURL=styles.css.map */
