--- a/scss/blog/blog.scss
+++ b/scss/blog/blog.scss
@@ -1,4 +1,47 @@
-.dateBox {
-  height: 60px;
-  width: 60px;
+.blog-Section {
+  max-width: $content-width;
+  min-height: 259px;
+  display: flex;
+  justify-content: space-between;
+  //   align-content: flex-start;
+  .dateBox {
+    height: 60px;
+    width: 60px;
+    background-color: #79addc;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 18px 0;
+    //   justify-content: space-between;
+
+    .dateNumber {
+      font-size: 22px;
+    }
+    .dateMonth {
+      font-size: 12px;
+    }
+  }
+  .blog-Section-Row {
+    // flex-direction: column;
+    width: 900px;
+    min-height: 300px;
+    // background-color: #79addc;
+    .blog-IMG-box {
+      max-width: 900px;
+      height: 259px;
+      .blog-IMG {
+        width: 100%;
+        height: 100%;
+        //   height: 250px;
+        background-image: url(../images/blog.jpg);
+        background-position: center;
+        background-size: cover;
+      }
+    }
+    p {
+      margin-top: 20px;
+      font-size: 15px;
+    }
+  }
 }
