--- a/scss/blog/blog.scss
+++ b/scss/blog/blog.scss
@@ -43,5 +43,11 @@
       margin-top: 20px;
       font-size: 15px;
     }
+    .small-text {
+      color: #79addc;
+      font-size: 13px;
+      margin-top: 11px;
+      width: 400px;
+    }
   }
 }
