Added 2nd Blog Section and adjust margin space

--- a/css/styles.css
+++ b/css/styles.css
@@ -739,6 +739,7 @@ button a {
 .blog-Section .blog-Section-Row {
   width: 900px;
   min-height: 300px;
+  margin-bottom: 100px;
 }
 .blog-Section .blog-Section-Row .blog-IMG-box {
   max-width: 900px;
