--- a/scss/blog/blog.scss
+++ b/scss/blog/blog.scss
@@ -26,7 +26,7 @@
     // flex-direction: column;
     width: 900px;
     min-height: 300px;
-    // background-color: #79addc;
+    margin-bottom: 100px;
     .blog-IMG-box {
       max-width: 900px;
       height: 259px;
