created and imported contact.scss file

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,10 +2,11 @@
 @import "mixins.scss";
 @import "structure.scss";
 @import "nav/nav.scss";
-@import "header/header.scss";
 @import "buttons.scss";
+@import "header/header.scss";
 @import "tour/tourHeader.scss";
 @import "tour/tourPics.scss";
 @import "about/about.scss";
 @import "offers/offers.scss";
 @import "blog/blog.scss";
+@import "contact/contact.scss";
