--- a/css/styles.css
+++ b/css/styles.css
@@ -766,7 +766,9 @@ form .acrBoxes label {
 .mapBox {
   max-width: 400px;
   height: 442px;
-  background-color: #79addc;
+  background-image: url(../images/map.jpg);
+  background-position: center;
+  background-size: cover;
   margin-top: 50.5px;
 }
 
