--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -66,7 +66,10 @@
 // }
 
 form {
-  margin: 40px;
+  // .bookForm {
+  //   margin: 0 40px 40px 40px;
+  // }
+  margin: 0 40px 40px 40px;
   //   background-color: red;
   h1 {
     font-size: 60px;
