--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ button a {
   }
 }
 form {
-  margin: 40px;
+  margin: 0 40px 40px 40px;
 }
 form h1 {
   font-size: 60px;
@@ -770,6 +770,25 @@ form .acrBoxes label {
   background-position: center;
   background-size: cover;
   margin-top: 50.5px;
+}
+
+.contact-Form {
+  margin: 0;
+  max-width: 530px;
+  min-height: 442px;
+  background-color: red;
+}
+.contact-Form input,
+.contact-Form label {
+  font-family: "Gill Sans MT";
+  font-size: 16px;
+  color: #707070;
+  border: none;
+}
+.contact-Form .contactBox1 {
+  height: 60px;
+  width: 530px;
+  background-color: #f5f5f5;
 }
 
 .addressBox {
