--- a/scss/contact/contact.scss
+++ b/scss/contact/contact.scss
@@ -8,6 +8,26 @@
   margin-top: 50.5px;
 }
 
+.contact-Form {
+  margin: 0;
+  max-width: 530px;
+  min-height: 442px;
+  background-color: red;
+  input,
+  label {
+    font-family: "Gill Sans MT";
+    font-size: 16px;
+    color: #707070;
+    border: none;
+  }
+
+  .contactBox1 {
+    height: 60px;
+    width: 530px;
+    background-color: #f5f5f5;
+  }
+}
+
 .addressBox {
   max-width: 400px;
   height: 161px;
