--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,11 @@ button a {
   font-weight: bold;
 }
 
+.send-Message {
+  width: 167px;
+  height: 60px;
+}
+
 .homeBanner {
   height: 500px;
   max-width: 1280px;
@@ -763,20 +768,27 @@ form .acrBoxes label {
   width: 400px;
 }
 
+.contact-Wrap {
+  max-width: 980px;
+  min-height: 100%;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 50.5px;
+}
+
 .mapBox {
-  max-width: 400px;
+  width: 400px;
   height: 442px;
   background-image: url(../images/map.jpg);
   background-position: center;
   background-size: cover;
-  margin-top: 50.5px;
+  margin-right: 50px;
 }
 
 .contact-Form {
   margin: 0;
-  max-width: 530px;
+  width: 530px;
   min-height: 442px;
-  background-color: red;
 }
 .contact-Form input,
 .contact-Form label {
@@ -785,16 +797,23 @@ form .acrBoxes label {
   color: #707070;
   border: none;
 }
+.contact-Form .contactBox1,
+.contact-Form .contactBox2 {
+  width: 529px;
+  background-color: #f5f5f5;
+}
 .contact-Form .contactBox1 {
   height: 60px;
-  width: 530px;
-  background-color: #f5f5f5;
+}
+.contact-Form .contactBox2 {
+  height: 200px;
 }
 
 .addressBox {
   max-width: 400px;
   height: 161px;
-  margin-top: 24px;
+  margin-top: 34px;
+  margin-bottom: 60px;
 }
 .addressBox p {
   font-size: 18px;
