--- a/scss/contact/contact.scss
+++ b/scss/contact/contact.scss
@@ -1,18 +1,27 @@
+.contact-Wrap {
+  max-width: $content-width;
+  min-height: 100%;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 50.5px;
+  // justify-content: space-between;
+}
+
 .mapBox {
-  max-width: 400px;
+  width: 400px;
   height: 442px;
   // background-color: #79addc;
   background-image: url(../images/map.jpg);
   background-position: center;
   background-size: cover;
-  margin-top: 50.5px;
+  margin-right: 50px;
 }
 
 .contact-Form {
   margin: 0;
-  max-width: 530px;
+  width: 530px;
   min-height: 442px;
-  background-color: red;
+  // background-color: red;
   input,
   label {
     font-family: "Gill Sans MT";
@@ -21,17 +30,24 @@
     border: none;
   }
 
+  .contactBox1,
+  .contactBox2 {
+    width: 529px;
+    background-color: #f5f5f5;
+  }
   .contactBox1 {
     height: 60px;
-    width: 530px;
-    background-color: #f5f5f5;
+  }
+  .contactBox2 {
+    height: 200px;
   }
 }
 
 .addressBox {
   max-width: 400px;
   height: 161px;
-  margin-top: 24px;
+  margin-top: 34px;
+  margin-bottom: 60px;
   p {
     font-size: 18px;
   }
